--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,16 @@ ol ol {
 	margin-top: 0;
 	box-shadow: 0 -8px 30px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+
+.faq-max-width {
+	max-width:100%;
+}
+
+.footer-row {
+	margin-bottom: 0;
+}
+
+.not-found-progress-bar {
+	max-width: 400px;
+	margin: 15px auto;
+}
