--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,7 @@ ol ol {
 #brozerly-footer {
 	margin-top: 0;
 	box-shadow: 0 -8px 30px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	padding-bottom:1px;
 }
 
 .faq-max-width {
